# luminis

./: README.md
hypatia-cpp/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
hypatia-cpp/src/: hypatia.cpp  hypatia.h
hypatia-python/: data.ipynb  plot3d.py  utils.py
hypatia-unity/Assets/Editors/: ReadAndPlotCsvSceneMainEditor.cs  ReadCsvAndDrawMainEditor.cs
hypatia-unity/Assets/Plugins/: HypatiaCpp.dylib
hypatia-unity/Assets/Prefabs/: CelBodyEllipsoidVolumePrefab.prefab  CelBodyTransparentEllipsoidPrefab.prefab
hypatia-unity/Assets/Scenes/: LerpCsvScene.unity  ReadAndPlotCsvScene.unity
hypatia-unity/Assets/Scripts/: ArcballCamera.cs  CelestialBody.cs  CelestialBodyCsv.cs  HypatiaCpp.cs  HypatiaCppTestMain.cs  ICelestialBodyGameObject.cs  LerpCsvMain.cs  LerpCsvSceneMain.cs  NewBehaviourScript.cs  PlotWith3DTextureMain.cs  PlotWithDrawMain.cs  PlotWithOpenVdbMain.cs  ReadAndPlotCsvSceneMain.cs  ReadCsvAndDrawSceneMain.cs
hypatia-unity/Assets/StreamingAssets/: cosmicflow.csv
hypatia-unity/ProjectSettings/: ProjectSettings.asset
luminis-cpp/: CMakeLists.txt  README.md  vcpkg.json
luminis-cpp/src/: luminis.cpp  luminis.h  main.cpp
luminis-python/: README.md  data.ipynb  fof.py  plot_csv.py  utils.py
luminis-python/.ipynb_checkpoints/: data-checkpoint.ipynb
luminis-unity/: README.md
luminis-unity/Assets/Editors/: LerpCsvMainEditor.cs  PlotWithDrawMainEditor.cs
luminis-unity/Assets/Materials/: ExampleMaterial.mat  Unlit.mat  XZGrid.mat
luminis-unity/Assets/Prefabs/: CelBodyPointPrefab.prefab
luminis-unity/Assets/Scenes/: LerpCsvScene.unity  LuminisCppTestScene.unity  MultiCBodyLabScene.unity  PlotWith3DTextureScene.unity  PlotWithDrawScene.unity  PlotWithEntitiesScene.unity  PlotWithOpenVdbScene.unity  SingleCBodyLabScene.unity
luminis-unity/Assets/Scenes/PlotWithGameObjects/: PlotWithGameObjectsMain.cs  PlotWithGameObjectsMainEditor.cs  PlotWithGameObjectsScene.unity
luminis-unity/Assets/Scenes/PlotWithRenderMesh/: PlotWithRenderMeshMain.cs  PlotWithRenderMeshMainEditor.cs  PlotWithRenderMeshScene.unity
luminis-unity/Assets/Scenes/Uncertainty2D/: Uncertainty2D.unity  Uncertainty2DCircle.mat  Uncertainty2DCircle.shader  Uncertainty2DEllipse.mat  Uncertainty2DEllipse.shader  Uncertainty2DEllipseExp.mat  (+4 more)
luminis-unity/Assets/Scripts/: ArcballCamera.cs  CelestialBody.cs  CelestialBodyCsv.cs  LerpCsvMain.cs  LockedArcballCamera.cs  LuminisCpp.cs  LuminisCppTestMain.cs  OrbitCamera.cs  PlotWithDrawMain.cs  PlotWithEntitiesMain.cs  PlotWithGameObjectsMain.cs  PositionLerp.cs  Utils.cs
luminis-unity/Assets/Shaders/: ExampleShader.shader  Unlit.shader  XZGrid.shader
luminis-unity/Assets/StreamingAssets/: cosmicflow.csv  cosmicflow_fof.csv  data.csv
luminis-unity/ProjectSettings/: ProjectSettings.asset
(+8 files in other folders)
